# tmsagent

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_STATUS.md  CLAUDE.md  OBSERVABILITY_SETUP.md  README.md  README_CURRENT.md  SUGGESTED_QUESTIONS.md  docker-compose.yml  fix_auth_deps.sh  pyproject.toml  run.sh  setup_sample_data.py  start.sh  stop.sh
backend/: .env  .env.example  BIGQUERY_TOOLS_ENHANCEMENT_SUMMARY.md  BUSINESS_RULES_INTEGRATION_SUMMARY.md  Dockerfile  SQL_EXAMPLES_INTEGRATION_SUMMARY.md  TABLE_DOCUMENTATION_INTEGRATION_SUMMARY.md  TABLE_INFO_README.md  VECTOR_DATABASE_SETUP.md  cleanup_repository.py  example_enhanced_bigquery_tools.py  example_table_info_usage.py  main.py  pytest.ini  requirements.txt  run_tests.py  run_working_tests.py  simple_main.py  start_backend.sh  temp_main.py  test_business_rules_integration.py  test_modular_fix.py  test_sql_examples_integration.py  test_table_documentation.py
backend/app/api/: auth.py  charts.py  chat.py  database.py  suggested_questions.py  table_info.py  upload.py  websocket.py
backend/app/config/: __init__.py  auth_config.py  observability.py  vector_config.py
backend/app/core/: persistent_session_manager.py  session_manager.py
backend/app/data_science/: __init__.py  agent.py  prompts.py  tools.py
backend/app/data_science/sub_agents/: __init__.py
backend/app/data_science/sub_agents/analytics/: __init__.py  agent.py
backend/app/data_science/sub_agents/bigquery/: __init__.py  agent.py  prompts_config.py  tools.py  tools_backup.py
backend/app/data_science/sub_agents/bqml/: __init__.py  agent.py
backend/app/database/: models.py
backend/app/middleware/: __init__.py  auth_middleware.py
backend/app/models/: chat.py
backend/app/services/: chart_executor.py  entity_indexer.py  entity_resolver.py  table_info_service.py  vector_search_service.py
backend/data/: conversations.db  conversations.db-shm  conversations.db-wal  conversations.db.backup
backend/data/vector_db/3fa928f0-1e09-4cc2-b23b-2d09759c2cdd/: index_metadata.pickle
backend/data/vector_db/ac9aaf0b-39b2-4cf7-b225-d3457cc6d11e/: index_metadata.pickle
backend/scripts/: index_entities.py
backend/tests/: conftest.py  test_agent_routing.py  test_api_endpoints_fixed.py  test_basic_functionality.py  test_database_models.py  test_integration_fixed.py  test_session_manager.py  test_utils.py
deployment/: __init__.py  config.yaml  deploy.py  test_deployment.py
eval/: __init__.py  conftest.py  test_agent_capabilities.py
frontend/: .env.local  Dockerfile  index.html  package-lock.json  package.json  serve.py  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/auth/: auth-component.tsx
frontend/src/components/chat/: chat-input.tsx  chat-window.tsx  message-bubble.tsx  suggested-questions.tsx
frontend/src/components/sidebar/: sidebar.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: chat-store.ts
frontend/src/types/: chat.ts
tests/: __init__.py  conftest.py  test_api_integration.py  test_root_agent.py  test_sub_agents.py  test_tools.py
